fix spacing in showcase

--- a/src/components/Showcase/style.scss
+++ b/src/components/Showcase/style.scss
@@ -7,13 +7,7 @@
     object-fit: cover;
 
     @include media-breakpoint-up(lg) {
-      height: 100%;
-    }
-  }
-
-  &__img--desktop-1 {
-    @include media-breakpoint-up(lg) {
-      height: 260px;
+      height: auto;
     }
   }
 }
